# openmp-parallelization

./: .gitignore
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: Benchmark.cpp  CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  ImageHelper.cpp  ImageHelper.h  ImageToBlur.cpp  ImageToBlur.h  Parallelization.cpp  RgbToHsv.cpp  RgbToHsv.h  benchmark.cpp
ConsoleApplication1/ConsoleApplication1/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  vc143.idb
ConsoleApplication1/ConsoleApplication1/x64/Debug/ConsoleA.4dfdb35b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ConsoleApplication1/ConsoleApplication1/x64/Release/: ConsoleApplication1.exe.recipe  ConsoleApplication1.iobj  ConsoleApplication1.ipdb
ConsoleApplication1/ConsoleApplication1/x64/Release/ConsoleA.4dfdb35b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
